clusters/cl01tl/manifests/tubearchivist/HTTPRoute-http-route-tubearchivist.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-tubearchivist
  namespace: tubearchivist
  labels:
    app.kubernetes.io/name: http-route-tubearchivist
    app.kubernetes.io/instance: tubearchivist
    app.kubernetes.io/part-of: tubearchivist
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - tubearchivist.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: tubearchivist
          port: 80
          weight: 100
